--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URL=mongodb://127.0.0.1:27017/PSC?directConnection=true
 SECRET_KEY=PSCPROJECT
+KEY_ID=rzp_test_h8IfBaZ34VQ0c6
+KEY_SECRET= NzQR1Bt4fjXTDLxrrvSKGbHf
