--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "googleapis": "^128.0.0",
+    "googleapis-common": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "otp-generator": "^4.0.1",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "stream": "^0.0.2"
   }
 }
