--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "fs": "^0.0.1-security",
+    "google-auth-library": "^9.2.0",
     "googleapis": "^128.0.0",
     "googleapis-common": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
